:zap: wip cli - add grpc client and service
